--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport-local": "^1.0.0",
     "pg": "^7.6.0",
     "psql": "0.0.1",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^2.1.1"
   }
 }
